# POPSlegacy

./: AUTHORS  CODE_OF_CONDUCT.md  ChangeLog  ISSUE_TEMPLATE.md  Makefile  Makefile.in  NEWS  PULL_REQUEST_TEMPLATE.md  README  README.md  TODO  cJSON  config.status  config.status.lineno  configure  configure.ac  configure.lineno  index.html  params.json
.github/ISSUE_TEMPLATE/: Bug_report.md
FunPDBe_allpdb/: pops_XML.R  pops_xml.R
R/: pops.R  shiny.R
Rgraph/: atomSASA.R  chainSASA.R  residueSASA.R
src/: .topol.c.swp  Makefile  Makefile.am  Makefile.in  arg.c  arg.h  argpdb.h  atomgroup_data.h  config.h  config.h.in~  getmmCIF.c  getmmCIF.h  getpdb.c  getpdb.h  getpdbml.c  getpdbml.h  gmon.out  json.c  json.h  pdb_structure.h  pops.c  pops.h  putbsasa.c  putbsasa.h  putsasa.c  putsasa.h  putsigma.c  sasa.c  sasa.h  sasa_const.h  sasa_data.h  sigma.c  sigma_const.h  sigma_data.h  tags  topol.c  topol.h  type.c  type.h
src/.deps/: arg.Po  atomgroup.Po  error.Po  fs.Po  getpdb.Po  gettraj.Po  matrix.Po  modstring.Po  pattern.Po  pops.Po  putsasa.Po  putsigma.Po  safe.Po  sasa.Po  sigma.Po  topol.Po  type.Po  vector.Po
tests/: 1aki.gro  Makefile  Makefile.am  Makefile.in  test1.sh  test1a.sh  test1b.sh  test2.sh  test2a.sh  test2b.sh  test2c.sh  test2d.sh  test2e.sh  test3.sh  validateJSONfunpdbe.sh
webserver/: CHANGES  MB_submitjob.inc  MB_wiki_submitjob.inc  pops.inc  pops.inc.orig  pops.pl  sasa_data_atom  sasa_data_coarse
