#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1f3r.pdb \
    1aki.pdb\
	1aki.sdtraj.gro \
	1aki.sdtraj.gro.2 \
	host_file

noinst_SCRIPTS = \
	test0.sh \
	test1.sh \
	test1a.sh \
	test2.sh \
	test3.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

