#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1f3r.pdb \
	5lff.xml \
    1aki.pdb\
	1aki.sdtraj.gro \
	host_file

noinst_SCRIPTS = \
	test0.sh \
	test1.sh \
	test1a.sh \
	test1b.sh \
	test1c.sh \
	test1d.sh \
	test2.sh \
	test3.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

